--- a/index.html
+++ b/index.html
@@ -7,42 +7,43 @@
     <style>
         body {
             margin: 0;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             background-color: black;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
         }
         .heart {
-            width: 100px;
-            height: 100px;
-            background-color: pink;
+            width: 150px;
+            height: 150px;
+            background: linear-gradient(135deg, pink, purple);
             position: relative;
-            transform: rotate(45deg);
-            animation: spin 4s infinite linear;
+            animation: pulsate 1s infinite;
         }
         .heart:before,
         .heart:after {
             content: "";
-            width: 100px;
-            height: 100px;
-            background-color: pink;
+            width: 150px;
+            height: 150px;
+            background: linear-gradient(135deg, pink, purple);
             border-radius: 50%;
             position: absolute;
         }
         .heart:before {
-            top: -50px;
+            top: -75px;
             left: 0;
         }
         .heart:after {
-            left: 50px;
+            left: 75px;
             top: 0;
         }
-        @keyframes spin {
-            0% { transform: rotate(45deg); }
-            100% { transform: rotate(405deg); }
+        @keyframes pulsate {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
         }
         .message {
             position: absolute;
@@ -50,10 +51,58 @@
             text-align: center;
             font-size: 2rem;
         }
+        .cat {
+            position: absolute;
+            width: 100px;
+            height: auto;
+            animation: float 5s infinite;
+        }
+        .cat:nth-child(2) { left: 10%; animation-duration: 4s; }
+        .cat:nth-child(3) { left: 20%; animation-duration: 6s; }
+        .cat:nth-child(4) { left: 70%; animation-duration: 7s; }
+        .cat:nth-child(5) { left: 80%; animation-duration: 5s; }
+
+        @keyframes float {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0); }
+        }
+        .small-heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: pink;
+            animation: fly 4s infinite;
+        }
+        @keyframes fly {
+            0% { opacity: 1; transform: translateY(0) translateX(0); }
+            100% { opacity: 0; transform: translateY(-500px) translateX(200px); }
+        }
     </style>
 </head>
 <body>
     <div class="heart"></div>
     <div class="message">I love you Tynka</div>
+    <img src="https://i.imgur.com/t9p5GpI.png" class="cat" style="left: 10%; top: 10%;" alt="kawaii cat">
+    <img src="https://i.imgur.com/t9p5GpI.png" class="cat" style="left: 20%; top: 20%;" alt="kawaii cat">
+    <img src="https://i.imgur.com/t9p5GpI.png" class="cat" style="left: 70%; top: 15%;" alt="kawaii cat">
+    <img src="https://i.imgur.com/t9p5GpI.png" class="cat" style="left: 80%; top: 25%;" alt="kawaii cat">
+
+    <script>
+        // Function to create a small flying heart
+        function createHeart() {
+            const heart = document.createElement('div');
+            heart.className = 'small-heart';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.top = Math.random() * 100 + 'vh';
+            document.body.appendChild(heart);
+            setTimeout(() => {
+                heart.remove();
+            }, 4000);
+        }
+
+        // Create hearts at intervals
+        setInterval(createHeart, 500);
+    </script>
 </body>
 </html>
